submit return false

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="../src/autosearch.css">
 </head>
 <body>
+<form action="xx.html">
 	<input type="text"  class="autosearch"><input type="hidden" name="hd_id" id="hd_id">
+	</form>
 	<script src="../src/jquery-1.11.2.js"></script>
 	<script src="../src/autosearch.js"></script>
 	<script>
